--- a/package.json
+++ b/package.json
@@ -1,9 +1,21 @@
 {
-        "author": "dev@viperize.it",
-        "description": "Zerynth App Module",
-        "name": "Zerynth App Module",
-        "fullname":"lib.zerynth.viperapp",
-        "dependencies": {
-        }
+    "dependencies": {
+        "lib.zerynth.zadm": "r2.0.11"
+    },
+    "description": "Zerynth App support to control devices",
+    "fullname": "lib.zerynth.zerynthapp",
+    "git_pointer": "zerynth://zerynth-libs/zerynth-zerynthapp",
+    "info": {
+        "chip_manufacturer": "-",
+        "chip_name": "-",
+        "name": "Zerynth App Library",
+        "type": "Tool"
+    },
+    "keywords": [
+        "app"
+    ],
+    "repo": "official",
+    "title": "Zerynth App Library",
+    "version": "r2.0.11",
+    "whatsnew": ""
 }
-
